Fix resizer z-index conflicts

--- a/app/assets/stylesheets/app/_editor.scss
+++ b/app/assets/stylesheets/app/_editor.scss
@@ -21,7 +21,7 @@ $heading-height: 75px;
 
   background-color: white;
   border-bottom: none;
-  z-index: 100;
+  z-index: $z-index-editor-title-bar;
 
   height: auto;
   overflow: visible;
@@ -96,7 +96,7 @@ $heading-height: 75px;
 
 .editor-content, #editor-content {
   flex: 1;
-  z-index: 10;
+  z-index: $z-index-editor-content;
   overflow-y: hidden;
   height: 100%;
   display: flex;
