--- a/app/assets/stylesheets/app/_menus.scss
+++ b/app/assets/stylesheets/app/_menus.scss
@@ -10,7 +10,7 @@
   left: 0;
   float: left;
   min-width: 160px;
-  z-index: 100;
+  z-index: $z-index-dropdown-menu;
 
   margin-top: 5px;
   width: 280px;
